--- a/Course 1. Front-End Web UI Frameworks and Tools Bootstrap 4/Coursera/Bootstrap4/conFusion/css/styles.css
+++ b/Course 1. Front-End Web UI Frameworks and Tools Bootstrap 4/Coursera/Bootstrap4/conFusion/css/styles.css
@@ -52,11 +52,12 @@ body {
   position: absolute;
   bottom: 0px; }
 
-/* Assignment 4 */
-.modal-content {
+.modal-header {
+  background: #512DA8;
+  color: floralwhite; }
+
+.close {
+  color: floralwhite; }
+
+.modal-body {
   background: #D1C4E9; }
-  .modal-content .modal-header {
-    background: #512DA8;
-    color: floralwhite; }
-  .modal-content .close {
-    color: floralwhite; }
