--- a/Course 1. Front-End Web UI Frameworks and Tools Bootstrap 4/Coursera/Bootstrap4/conFusion/css/styles.scss
+++ b/Course 1. Front-End Web UI Frameworks and Tools Bootstrap 4/Coursera/Bootstrap4/conFusion/css/styles.scss
@@ -73,15 +73,15 @@ body{
     position: absolute;
     bottom: 0px;
 }
-
-.modal-content {
-    background: $background-pale;
     
-    .modal-header {
-        background: $background-dark;
-        color:floralwhite;
+.modal-header {
+    background: $background-dark;
+    color:floralwhite;
     }
     .close {
         color: floralwhite;
     }
+    
+.modal-body {
+    background: $background-pale;
 }
